2006-08-31  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/control:
	* hildon-widgets/hildon-name-password-dialog.c: Applying a patch by
	Fernando to fix the autocaptialization for username/password entries.
	Fixes #NB37467.

2006-08-30  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[Merging 0.13.1 => TRUNK]

	* ./: Merging the experimental color selector branch. Fixes: #NB37010,
	#NB38559, #33217, #NB37172.   
	Maintainer change:
	Michael Dominic Kostrzewa
	<michael.kostrzewa@nokia.com>

	* configure.ac: Bumping the version number to 0.14.0.

2006-08-30  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[0.13.1 branch]

	* ./: Cosmetics.

2006-08-30  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[0.13.1 branch]

	* AUTHORS: Adding an AUTHORS file with maintainer/contact information.

	* debian/control:
	* debian/copyright:
	* hildon-widgets-plugins/hildon-color-chooser-dialog-hsv.c:
	* hildon-widgets-plugins/hildon-color-chooser-hsv.c:
	* hildon-widgets/gtk-infoprint.c:
	* hildon-widgets/gtk-infoprint.h:
	* hildon-widgets/hildon-add-home-dialog.c:
	* hildon-widgets/hildon-add-home-dialog.h:
	* hildon-widgets/hildon-app-private.h:
	* hildon-widgets/hildon-app.c:
	* hildon-widgets/hildon-app.h:
	* hildon-widgets/hildon-appview.c:
	* hildon-widgets/hildon-appview.h:
	* hildon-widgets/hildon-banner.c:
	* hildon-widgets/hildon-banner.h:
	* hildon-widgets/hildon-calendar-popup.c:
	* hildon-widgets/hildon-calendar-popup.h:
	* hildon-widgets/hildon-caption.c:
	* hildon-widgets/hildon-caption.h:
	* hildon-widgets/hildon-code-dialog.c:
	* hildon-widgets/hildon-code-dialog.h:
	* hildon-widgets/hildon-color-button.c:
	* hildon-widgets/hildon-color-button.h:
	* hildon-widgets/hildon-color-chooser-button.c:
	* hildon-widgets/hildon-color-chooser-button.h:
	* hildon-widgets/hildon-color-chooser-dialog.c:
	* hildon-widgets/hildon-color-chooser-dialog.h:
	* hildon-widgets/hildon-color-chooser.c: